@@ -47,6 +47,9 @@
 (defvar initial)
 (defvar undo-beg-posn)
 (defvar undo-end-posn)
+
+(eval-and-compile
+  (unless (fboundp 'declare-function) (defmacro declare-function (&rest  r))))
 ;; end pacifier
 
 
@@ -3083,10 +3086,9 @@ On reaching beginning of line, stop and signal error."
     (setq this-command 'next-line)
     (if com (viper-execute-com 'viper-next-line val com))))
 
-;; declare-function is not defined in XEmacs
-;;(declare-function widget-type "wid-edit" (widget))
-;;(declare-function widget-button-press "wid-edit" (pos &optional event))
-;;(declare-function viper-set-hooks "viper" ())
+(declare-function widget-type "wid-edit" (widget))
+(declare-function widget-button-press "wid-edit" (pos &optional event))
+(declare-function viper-set-hooks "viper" ())
 
 (defun viper-next-line-at-bol (arg)
   "Next line at beginning of line.
